--- a/.github/workflows/workflow-summary.yml
+++ b/.github/workflows/workflow-summary.yml
@@ -79,6 +79,16 @@ jobs:
             export PIP_EXTRA_INDEX_URL=https://vsts-build@diveplane.com:${{ secrets.ARTIFACTORY_ACCESS_TOKEN }}@dpbuild.jfrog.io/artifactory/api/pypi/pypi-edge/simple
           fi
           ./bin/build.sh install_deps 3.11
+          # If the current repo is amalgam-lang-py or howso-engine-py, uninstall the editable install and install the build artifact .whl
+          if [[ "${{ github.event.repository.name }}" == "howso-engine-py" ]]; then
+            echo "Installing howso-engine build artifact"
+            pip uninstall howso-engine -y
+            pip install ./dist/*.whl --no-deps
+          elif [[ "${{ github.event.repository.name }}" == "amalgam-lang-py" ]]; then
+            echo "Installing amalgam-lang build artifact"
+            pip uninstall amalgam-lang -y
+            pip install ./dist/*.whl --no-deps
+          fi
           # Install any custom package versions
           declare -a arr=("howso-validator-enterprise-py" "howso-validator-py" "howso-synthesizer-py" "howso-engine-py" "amalgam-lang-py")
           for repo in "${arr[@]}"; do
