--- a/.github/workflows/workflow-summary.yml
+++ b/.github/workflows/workflow-summary.yml
@@ -27,13 +27,13 @@ jobs:
 
       - name: Download Artifacts
         # If the current repo is either of these, download the built artifact with embedded amalgam/howso-engine
-        if: github.event.repository.name == 'amalgam-lang-py' || github.repository == 'howso-engine-py'
+        if: github.event.repository.name == 'amalgam-lang-py' || github.event.repository.name == 'howso-engine-py'
         uses: actions/download-artifact@v3
         with:
           path: ./tmp
 
       - name: Configure artifacts
-        if: github.repository == 'amalgam-lang-py' || github.repository == 'howso-engine-py'
+        if: github.event.repository.name == 'amalgam-lang-py' || github.event.repository.name == 'howso-engine-py'
         run: |
           mkdir -p dist
           find ./tmp -type f -name '*.whl' -exec mv -t ./dist {} +
@@ -48,20 +48,9 @@ jobs:
             run_type=$(printf "%s" '${{ inputs.upstream-details }}' | jq -r --arg repo "$repo" '.[$repo]."run_type"')
             run_id=$(printf "%s" '${{ inputs.upstream-details }}' | jq -r --arg repo "$repo" '.[$repo]."run_id"')
             echo "Found run_type=$run_type and run_id=$run_id"
-            # Amalgam and howso-engine downloads need to be placed in their embedded location
             IFS='-' read -r plat arch <<< "${{ inputs.amalgam-plat-arch }}"
-            if [[ "$repo" == "amalgam" ]]; then
-              echo "Downloading and extracting Amalgam binaries for $plat/$arch..."
-              gh $run_type download -D amalgam/lib/$plat/$arch -R "howsoai/$repo" -p "*${{ inputs.amalgam-plat-arch }}*" "$run_id"
-              # Extract binaries
-              cd amalgam/lib/$plat/$arch && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
-              cp lib/* .
-              ls -l
-            elif [[ "$repo" == "howso-engine" ]]; then
-              echo "Downloading and extracting Howso Engine CAMLs..."
-              gh $run_type download -D howso/howso-engine -R "howsoai/$repo" -p "howso-engine-*" "$run_id"
-              # Extract CAMLs
-              cd howso/howso-engine && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
+            if [[ "$repo" == "amalgam" || "$repo" == "howso-engine" ]]; then
+              echo "Skipping: artifacts for $repo already embedded in built .whl file that will be installed later"
             else
               echo "Downloading $run_type artifacts..."
               gh $run_type download -D $repo -R "howsoai/$repo" -p "*-py3-none-any*" "$run_id"
