--- a/.github/workflows/workflow-summary.yml
+++ b/.github/workflows/workflow-summary.yml
@@ -72,11 +72,11 @@ jobs:
           if [[ "${{ github.event.repository.name }}" == "howso-engine-py" ]]; then
             echo "Installing howso-engine build artifact"
             pip uninstall howso-engine -y
-            pip install ./dist/*.whl --no-deps
+            pip install ./dist/*.whl --no-deps --user
           elif [[ "${{ github.event.repository.name }}" == "amalgam-lang-py" ]]; then
             echo "Installing amalgam-lang build artifact"
             pip uninstall amalgam-lang -y
-            pip install ./dist/*.whl --no-deps
+            pip install ./dist/*.whl --no-deps --user
           fi
           # Install any custom package versions
           declare -a arr=("howso-validator-enterprise-py" "howso-validator-py" "howso-synthesizer-py" "howso-engine-py" "amalgam-lang-py")
