Handles empty upstream-packages input in gen-reqs

--- a/.github/workflows/scan-pull-request.yml
+++ b/.github/workflows/scan-pull-request.yml
@@ -6,7 +6,7 @@ on:
       upstream-packages:
         description: A whitespace separated list of Howso package dependencies (e.g., "amalgam-lang-py howso-engine-py").
         type: string
-        required: true
+        required: false
 
 jobs:
 
