--- a/.github/workflows/compile-requirements.yml
+++ b/.github/workflows/compile-requirements.yml
@@ -151,9 +151,11 @@ jobs:
           # Do not include Howso software in the 3rd party license file
           this_repo="${{ github.event.repository.name }}"
           this_repo=${this_repo//-py/}  # Remove the "-py" postfix
-          upstream_packages="${{ inputs.upstream-packages }}"
-          upstream_packages=${upstream_packages//-py/}  # Remove all "-py" postfixes
-          pip uninstall $upstream_packages -y
+          if [[ -n "${{ inputs.upstream-packages }}"]]; then
+            upstream_packages="${{ inputs.upstream-packages }}"
+            upstream_packages=${upstream_packages//-py/}  # Remove all "-py" postfixes
+            pip uninstall $upstream_packages -y
+          fi
           pip uninstall $this_repo -y || true
           pip install pip-licenses
           pip list | grep howso
