--- a/.github/workflows/workflow-summary.yml
+++ b/.github/workflows/workflow-summary.yml
@@ -6,11 +6,6 @@ on:
       upstream-details:
         type: string
         required: true
-      amalgam-plat-arch:
-        description: The platform/arch string to match when downloading Amalgam builds (ex. "linux-amd64", "darwin-arm64")
-        required: false
-        type: string
-        default: "linux-amd64"
 
 jobs:
 
@@ -48,7 +43,6 @@ jobs:
             run_type=$(printf "%s" '${{ inputs.upstream-details }}' | jq -r --arg repo "$repo" '.[$repo]."run_type"')
             run_id=$(printf "%s" '${{ inputs.upstream-details }}' | jq -r --arg repo "$repo" '.[$repo]."run_id"')
             echo "Found run_type=$run_type and run_id=$run_id"
-            IFS='-' read -r plat arch <<< "${{ inputs.amalgam-plat-arch }}"
             if [[ "$repo" == "amalgam" || "$repo" == "howso-engine" ]]; then
               echo "Skipping: artifacts for $repo already embedded in built .whl file that will be installed later"
             else
@@ -76,8 +70,9 @@ jobs:
           elif [[ "${{ github.event.repository.name }}" == "amalgam-lang-py" ]]; then
             echo "Installing amalgam-lang build artifact"
             pip uninstall amalgam-lang -y
-            pip install ./dist/*.whl --no-deps --user
+            pip install ./dist/*py3-none-manylinux_2_29_x86_64.whl --no-deps --user
           fi
+          echo "Installing custom packages..."
           # Install any custom package versions
           declare -a arr=("howso-validator-enterprise-py" "howso-validator-py" "howso-synthesizer-py" "howso-engine-py" "amalgam-lang-py")
           for repo in "${arr[@]}"; do
@@ -88,14 +83,17 @@ jobs:
             fi
           done
           pip list | grep amalgam
-          pip list | grep howso
+          # The below may fail if there are no howso-branded packages installed, i.e., in the case of amalgam-lang-py
+          pip list | grep howso || true
 
           # Determine site-packages location (to retrieve version.json)
           site_packages=$(python -m site --user-site)
 
           # Get amalgam metadata from version.json
+          echo "Getting Amalgam metadata..."
           ls -l $site_packages/amalgam/lib/
           amlg_version=$(jq -r '.version.amalgam' $site_packages/amalgam/lib/version.json)
+          echo "Amalgam version: $amlg_version"
           amlg_sha=$(jq -r '.version."amalgam_sha"' $site_packages/amalgam/lib/version.json)
           amlg_url=$(jq -r '.version."amalgam_url"' $site_packages/amalgam/lib/version.json)
           if [[ $(cat $site_packages/amalgam/lib/version.json | jq '.version | has("amalgam_build_date")') == true && $(cat $site_packages/amalgam/lib/version.json | jq '.version.amalgam_build_date') != "\"\"" ]]; then
