--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -86,6 +86,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.HOWSOAI_WORKFLOW_AUTOMATION_CLASSIC_TOKEN }}
         run: |
+          pwd
           while read -r repo; do
             echo "Getting details for $repo"
             # Remove carriage return character (Windows issue)
@@ -108,6 +109,7 @@ jobs:
               gh $run_type download -D howso/howso-engine -R "howsoai/$repo" -p "howso-engine-*" "$run_id"
               # Extract CAMLs
               cd howso/howso-engine && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
+              pwd && ls -l
             else
               gh $run_type download -D $repo -R "howsoai/$repo" -p "*-py3-none-any*" "$run_id"
               # Needed because release/non-release downloads are different structure
