--- a/.github/workflows/scan-pull-request.yml
+++ b/.github/workflows/scan-pull-request.yml
@@ -50,9 +50,9 @@ jobs:
             exit 0
           fi
           # Run a scan, but don't fail if there are problems, and save the exit code/output
-          output=$(jf s ./dist/ --licenses --watches github-actions 1>&2) || exit_code=$?
+          output=$(jf s ./dist/ --licenses --watches pipeline-distributed 1>&2) || exit_code=$?
           echo "$output"
           # Check if the command failed and raise a warning if so
-          if [ $exit_code -ne 0 ]; then
+          if [ "$exit_code" != "0" ]; then
             echo "::warning title=Security and/or license violations found!::Please view the output of the JFrog xray scanner job."
           fi
