--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -154,10 +154,10 @@ jobs:
               pip install $repo/*.whl
             fi
           done
-          pip list | grep amalgam
-          # The below may fail if there are no howso-branded packages installed, i.e., in the case of amalgam-lang-py
+          # The below may fail if there are no howso-branded packages installed, i.e., in the case of howso-run-py
+          pip list | grep amalgam || true
           pip list | grep howso || true
-          env | grep HOWSO_CONFIG
+          env | grep HOWSO_CONFIG || true
           echo "Running pytests..."
 
           # If the platform is Windows, specify UTF8 enconding as it may not be on by default
