--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -124,6 +124,7 @@ jobs:
         if: inputs.platform-pretty == 'MacOS'
         run: |
           brew install libomp
+          brew install sqlite3
 
       - name: Download tz data
         if: inputs.platform-pretty == 'Windows'
